2014-06-20  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_sphparam.m (0.3.6)

	- Remove 'LocalConvexHull' option. It lets the algorithm move
	vertices that belong to another tangled component, which causes
	errors, as we don't recompute tangled vertices in each loop. Now
	that the algorithm has been fixed, it doesn't seem necessary
	either.

	- Remove code that decided between the intial guess and the found
	solution. For local constrained SMACOF, as we want to keep the
	found solution even if its not valid, so that we can run the
	algorithm again with different bounds.

	* matlab/ManifoldToolbox/tri_sphparam.m (0.3.5)

	- Fix bug. As now we don't assing NaNs to vertices of local
	components that cannot be untangled, we also need to change the
	test in topology check to see whether a valid solution was
	returned.

	- Add note to the help header: Note that it seems that SCIP, or
	maybe the way we input/output the problem to it causes small
	tolerances in the constraints. E.g. if VMIN=1, we may get a
	tetrahedron in the solution with volume 1-1e-5. This will be
	detected by TopologyCheck as a violation of the constraint, but it
	shouldn't be a problem in most cases.

	* matlab/ManifoldToolbox/tri_ccqp_smacof_nofold_sph_pip.m (0.2.4)

	- Allow VMIN, VMAX to be vectors so that we can pass different
	volume boundaries to each mesh tetrahedron.

	- Fix bug. One of the constraints was never written because it had
	if(vmax(I)>inf) instead of if(vmax(I)<inf).

	* matlab/ManifoldToolbox/tri_sphparam.m (0.3.4)

	- Adapt to change in tri_ccqp_smacof_nofold_sph_pip(). Now VMIN,
	VMAX can be vectors.

	- When a local component cannot be untangled, leave its vertices
	untouched intead of converting them to NaN.

2014-06-18  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_sphparam.m (0.3.3)

	- Fix general structure of the function so that it works with all
	the methods. Now each method has to compute the stress of the